src/react/App.css
.App {
    text-align: center;
    background-color: #002b487d;
}

.App-logo {
    animation: App-logo-spin infinite 20s linear;
    height: 40vmin;
}

.App-header {
    background-color: #282c34;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: calc(10px + 2vmin);
    color: white;
}

.App-link {
    color: #61dafb;
}

@keyframes App-logo-spin {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

.ui.inverted.blue.table.MemberTable {
    background-color: #2185d008 !important;
}

.ui.fluid.left.icon.input input[type='text'] {
    background-color: rgb(87 194 226 / 20%);
    font-weight: bold;
    font-size: x-large;
    color: #fff;
}

/* Find Phone Number */
.ui.fluid.left.icon.input input[type='tel'] {
    background-color: rgb(87 194 226 / 20%);
    font-weight: bold;
    font-size: x-large;
    color: #fff;
}

/* Find Membership Number */
.ui.fluid.left.icon.input input[type='text'] {
    background-color: rgb(87 194 226 / 20%);
    font-weight: bold;
    font-size: x-large;
    color: #fff;
}

.ui.fluid.left.icon.input input[type='password'] {
    background-color: rgb(87 194 226 / 20%);
    font-weight: bold;
    font-size: x-large;
    color: #fff;
}

/* Login From Input Icon */
.field.whiteIcon i.icon {
    color: white;
}

.field.blueIcon i.icon {
    /* color: #006cb5; */
    color: #40b2ff;
}

/* LOGIN FORM */
.field.blueIcon div.input input[type='text']::-webkit-input-placeholder {
    color: #fff;
}
.field.blueIcon div.input input[type='password']::-webkit-input-placeholder {
    color: #fff;
}

/* FIND BUTTON */
.field.FindButton button {
    background-color: #006cb575;
    color: #fff;
}

/* LOGIN BUTTON */
.field.fade.LoginButton.visible.transition button {
    background-color: #006cb575;
}

/* LOGOUT BUTTON */
.field.fade.LogoutButton.visible.transition button {
    background-color: #006cb575;
    color: #fff;
}

.ui.massive.circular.fluid.icon.right.labeled.button.LogoutButton {
    background-color: #006cb575;
    color: #fff;
}

.lock.icon {
    color: turquoise;
}

.phone.icon {
    color: turquoise;
    /* color: #2185d0; */
}

.address.card.icon {
    color: turquoise;
}

.id.badge.icon {
    color: turquoise;
}

.ui.message {
    text-align: left;
}

/* BuyAccount */
.two.wide.field.BuyAccount label {
    color: #fff;
    margin-bottom: 10px;
}

.two.wide.field.BuyAccount div.ui.inverted.left.icon.input input {
    /* background-color: black; */
    color: white;
    /* background-color: #002b487d; */
    background-color: #d5c1c124;
}
.two.wide.field.BuyAccount div.ui.inverted.left.icon.input i {
    color: #00bcd4;
    /* color: #2185d0; */
    /* color: #fff; */
}

/* RecordAccount */
.two.wide.field.BuyRecord label {
    color: #fff;
    margin-bottom: 10px;
}

.two.wide.field.BuyRecord div.ui.inverted.left.icon.input input {
    /* background-color: black; */
    color: white;
    background-color: #002b487d;
}
.two.wide.field.BuyRecord div.ui.inverted.left.icon.input i {
    color: #00bcd4;
    /* color: #fff; */
}

/* LastRenew*/
.three.wide.field.LastRenew label {
    color: #fff;
}

.three.wide.field.LastRenew div.ui.inverted.left.icon.input input {
    /* background-color: black; */
    color: white;
    background-color: #002b487d;
}
.three.wide.field.LastRenew div.ui.inverted.left.icon.input i {
    color: #00bcd4;
    /* color: #2185d0; */
    /* color: #fff; */
}

/* LastRenew*/
.two.wide.field.LastRenew label {
    color: #fff;
    margin-bottom: 10px;
}

.two.wide.field.LastRenew div.ui.inverted.left.icon.input input {
    /* background-color: black; */
    color: white;
    /* background-color: #002b487d; */
    background-color: #2482c147;
}
.two.wide.field.LastRenew div.ui.inverted.left.icon.input i {
    color: #00bcd4;
    /* color: #2185d0; */
    /* color: #fff; */
}

/* BUY FORM:  OverGallon*/
.two.wide.field.OverGallon label {
    color: #fff;
    margin-bottom: 10px;
}

.two.wide.field.OverGallon div.ui.inverted.left.icon.input input {
    /* background-color: black; */
    color: white;
    /* background-color: #002b487d; */
    background-color: #8a17179a;
}
.two.wide.field.OverGallon div.ui.inverted.left.icon.input i {
    /* color: #00bcd4; */
    /* color: #2185d0; */
    color: #fff;
}

/* BUY FORM: GallonBuy */
.two.wide.field.GallonBuy label {
    color: #fff;
    margin-bottom: 10px;
}
.two.wide.field.GallonBuy div.ui.inverted.left.icon.input input {
    color: white;
    /* background-color: #002b487d; */
    background-color: #2482c147;
}
.two.wide.field.GallonBuy div.ui.inverted.left.icon.input i {
    color: rgb(255, 255, 255);
}
.two.wide.field.GallonBuy
    div.ui.inverted.left.icon.input
    input[type='text']::-webkit-input-placeholder {
    color: #fff;
    font-weight: bold;
}

/* .ui.inverted.left.icon.input input[type='text']::-webkit-input-placeholder {
    color: #fff;
} */

/* 3 BuyAccount */
.three.wide.field.BuyAccount label {
    /* color: rgba(24, 35, 94, 0.644); */
    /* color: red; */
    /* color: white; */
    color: #fff;
    margin-bottom: 10px;
}

.three.wide.field.BuyAccount div.ui.inverted.left.icon.input input {
    /* background-color: black; */
    color: white;
    /* background-color: #002b487d; */
    background-color: #d5c1c124;
}
.three.wide.field.BuyAccount div.ui.inverted.left.icon.input i {
    color: #00bcd4;
    /* color: #fff; */
}

/* SinceAccount */
.three.wide.field.BuySince label {
    color: #fff;
    margin-bottom: 10px;
}
.three.wide.field.BuySince div.ui.inverted.left.icon.input input {
    /* background-color: black; */
    color: white;
    /* color: black; */
    background-color: #002b487d;
}
.three.wide.field.BuySince div.ui.inverted.left.icon.input i {
    color: #00bcd4;
}

/* TodayDate Buy */
.three.wide.field.TodayDate label {
    color: #fff;
    margin-bottom: 10px;
}
.three.wide.field.TodayDate div.ui.inverted.left.icon.input input {
    /* background-color: black; */
    color: white;
    /* background-color: #002b487d; */
    background-color: #d5c1c124;
}
.three.wide.field.three.wide.field.TodayDate div.ui.inverted.left.icon.input i {
    color: #00bcd4;
    /* color: #fff; */
}

/* TodayDate Buy */
.two.wide.field.TodayDate label {
    color: #fff;
    margin-bottom: 10px;
}
.two.wide.field.TodayDate div.ui.inverted.left.icon.input input {
    /* background-color: black; */
    color: white;
    /* background-color: #002b487d; */
    background-color: #d5c1c124;
}
.two.wide.field.two.wide.field.TodayDate div.ui.inverted.left.icon.input i {
    color: #00bcd4;
    /* color: #fff; */
}

/* Customer full name */
.three.wide.field.Test label {
    color: #fff;
    margin-bottom: 10px;
}
.three.wide.field.three.wide.field.Test div.ui.inverted.input input {
    /* background-color: black; */
    color: white;
    /* background-color: #002b487d; */
    background-color: #d5c1c124;
}

/* Area Code */
.two.wide.field.AreaCode label {
    color: #fff;
    margin-bottom: 10px;
}
.two.wide.field.two.wide.field.AreaCode div.ui.inverted.input input {
    color: white;
    /* background-color: #002b487d; */
    background-color: #d5c1c124;
}

/* Area Code */
.one.wide.field.AreaCode label {
    color: #fff;
    /* color: red; */
    margin-bottom: 10px;
}
.one.wide.field.one.wide.field.AreaCode div.ui.inverted.input input {
    color: white;
    /* color: red; */
    /* background-color: #002b487d; */
    background-color: #d5c1c124;
}

/* Area Code */
.one.wide.field.Remain label {
    /* color: #fff; */
    color: red;
    margin-bottom: 10px;
}
.one.wide.field.one.wide.field.Remain div.ui.inverted.input input {
    /* color: white; */
    color: red;
    font-weight: bold;
    /* background-color: #002b487d; */
    background-color: #d5c1c124;
}

/* Phone Number */
.two.wide.field.PhoneNumber label {
    color: #fff;
    margin-bottom: 10px;
}
.two.wide.field.two.wide.field.PhoneNumber div.ui.inverted.input input {
    color: white;
    /* background-color: #002b487d; */
    background-color: #d5c1c124;
}
/* FORM BUY: First Name */
/* .three.wide.field.FirstName label {
    color: #fff;
    margin-bottom: 10px;
}
.three.wide.field.FirstName div.ui.inverted.input input {
    color: white;
    border-radius: 50px;
    background-color: #2482c147;
}

.three.wide.field.FirstName
    div.ui.inverted.input
    input[type='text']::-webkit-input-placeholder {
    color: #fff;
    font-weight: bold;
} */

/* FORM BUY: Last Name */
/* .three.wide.field.LastName label {
    color: #fff;
    margin-bottom: 10px;
}
.three.wide.field.LastName div.ui.inverted.input input {
    color: white;
    border-radius: 50px;
    background-color: #2482c147;
}
.three.wide.field.LastName
    div.ui.inverted.input
    input[type='text']::-webkit-input-placeholder {
    color: #fff;
    font-weight: bold;
} */

/* 3 RecordAccount */
.three.wide.field.BuyRecord label {
    color: #fff;
}

.three.wide.field.BuyRecord div.ui.inverted.left.icon.input input {
    /* background-color: black; */
    color: white;
    background-color: #002b487d;
}
.three.wide.field.BuyRecord div.ui.inverted.left.icon.input i {
    color: #fff;
}

.ui.page.modals.dimmer.transition.visible.active {
    /* background-color: #006cb575; */
    background-color: #002b487d;
}

